WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162065
Fix isValidEnum to work with older versions of GCC
https://bugs.webkit.org/show_bug.cgi?id=162065
Summary
Fix isValidEnum to work with older versions of GCC
Anders Carlsson
Reported
2016-09-16 10:21:13 PDT
Fix isValidEnum to work with older versions of GCC
Attachments
Patch
(2.56 KB, patch)
2016-09-16 10:23 PDT
,
Anders Carlsson
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-09-16 10:23:45 PDT
Created
attachment 289070
[details]
Patch
Anders Carlsson
Comment 2
2016-09-16 10:49:01 PDT
Committed
r206031
: <
http://trac.webkit.org/changeset/206031
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug