Fix isValidEnum to work with older versions of GCC https://bugs.webkit.org/show_bug.cgi?id=162065

Reviewed by Michael Catanzaro.

Source/WTF:

Use the ternary operator instead of a more complex function body.

* wtf/EnumTraits.h:

Tools:

Add EnumTraits.cpp to the CMake build.

* TestWebKitAPI/CMakeLists.txt:

Canonical link: https://commits.webkit.org/180204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206031 268f45cc-cd09-0410-ab3c-d52691b4dbfc